Alignments corrected and new data

--- a/style.css
+++ b/style.css
@@ -100,8 +100,8 @@ table {
 }
 
 .main {
-    float: right;
-    width: 60%;
+    float: left;
+    width: 70%;
     padding: 0 20px;
 }
 
